ndla_timeline.scss: Fixes draggable on mobile by disabling overflow-x: hidden for html tag

--- a/src/sass/templates/_ndla_timeline.scss
+++ b/src/sass/templates/_ndla_timeline.scss
@@ -31,7 +31,8 @@ body,
 html {
   font-family: "Source Sans Pro", sans-serif;
   margin: 0;
-  overflow-x: hidden; //* DEBUG
+  // * NB! Do not enable in production. It breaks dragging on mobile
+  // overflow-x: hidden; //* DEBUG
   width: 100%;
   height: 100%;
 }
